@@ -2,6 +2,12 @@ v4.2.2 (xxxx-xx-xx)
 ---------------------------
 * added ArangoDatabaseAsync.grantAccess(String, Permissions)
 * added ArangoCollectionAsync.grantAccess(String, Permissions)
+* added ArangoDatabaseAsync.resetAccess(String)
+* added ArangoCollectionAsync.resetAccess(String)
+* added ArangoDBAsync.updateUserDefaultDatabaseAccess(String, Permissions)
+* added ArangoDBAsync.updateUserDefaultCollectionAccess(String, Permissions)
+* added ArangoCollectionAsync.getDocuments(Collection<String>, Class)
+
 
 v4.2.1 (2017-06-20)
 ---------------------------
